[package]
name = "cupid"
version = "0.2.1"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

description = "Native access to the x86 and x86_64 CPUID instruction"
readme = "README.md"
keywords = ["assembly", "system", "x86", "x86_64", "cpuid"]

homepage = "https://github.com/shepmaster/cupid"
repository = "https://github.com/shepmaster/cupid"
documentation = "https://shepmaster.github.io/cupid/"

license = "MIT"
build = "build.rs"

[dependencies]
cfg-if = "0.1"

[build-dependencies]
gcc = "0.3"

[features]
unstable = []
