[package]
name = "cupid"
# Are you releasing a semver-incompatible version? Remember to bump
# the C shim ABI name too!
version = "0.6.1"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

description = "Native access to the x86 and x86_64 CPUID instruction"
readme = "README.md"
keywords = ["assembly", "system", "x86", "x86_64", "cpuid"]

repository = "https://github.com/shepmaster/cupid"
documentation = "https://docs.rs/cupid/"

license = "MIT"
build = "build.rs"

[build-dependencies]
gcc = "0.3"
rustc_version = "0.2.2"
